@@ -917,9 +917,9 @@ fun reconstruct_hol_model {show_skolems, show_datatypes, show_consts}
                       debug, binary_ints, destroy_constrs, specialize,
                       skolemize, star_linear_preds, uncurry, fast_descrs,
                       tac_timeout, evals, case_names, def_table, nondef_table,
-                      user_nondefs, simp_table, psimp_table, intro_table,
-                      ground_thm_table, ersatz_table, skolems, special_funs,
-                      unrolled_preds, wf_cache, constr_cache},
+                      user_nondefs, simp_table, psimp_table, choice_spec_table,
+                      intro_table, ground_thm_table, ersatz_table, skolems,
+                      special_funs, unrolled_preds, wf_cache, constr_cache},
          binarize, card_assigns, bits, bisim_depth, datatypes, ofs} : scope)
         formats all_frees free_names sel_names nonsel_names rel_table bounds =
   let
@@ -936,10 +936,11 @@ fun reconstruct_hol_model {show_skolems, show_datatypes, show_consts}
        case_names = case_names, def_table = def_table,
        nondef_table = nondef_table, user_nondefs = user_nondefs,
        simp_table = simp_table, psimp_table = psimp_table,
-       intro_table = intro_table, ground_thm_table = ground_thm_table,
-       ersatz_table = ersatz_table, skolems = skolems,
-       special_funs = special_funs, unrolled_preds = unrolled_preds,
-       wf_cache = wf_cache, constr_cache = constr_cache}
+       choice_spec_table = choice_spec_table, intro_table = intro_table,
+       ground_thm_table = ground_thm_table, ersatz_table = ersatz_table,
+       skolems = skolems, special_funs = special_funs,
+       unrolled_preds = unrolled_preds, wf_cache = wf_cache,
+       constr_cache = constr_cache}
     val scope = {hol_ctxt = hol_ctxt, binarize = binarize,
                  card_assigns = card_assigns, bits = bits,
                  bisim_depth = bisim_depth, datatypes = datatypes, ofs = ofs}
